--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,6 @@
             <li class="text-secondary"><a href="./about.html">About</a></li>
           </ul>
         </div>
-      </div>
-      <div class="navbar-center">
         <a
           class="btn btn-ghost text-primary text-3xl underline underline-offset-2"
           href="#"
@@ -58,7 +56,12 @@
       <div class="navbar-end">
         <label class="swap swap-rotate pr-3">
           <!-- this hidden checkbox controls the state -->
-          <input type="checkbox" class="theme-controller" value="pastel" id="theme-controller"/>
+          <input
+            type="checkbox"
+            class="theme-controller"
+            value="pastel"
+            id="theme-controller"
+          />
 
           <!-- sun icon -->
           <svg
