--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <title>Home</title>
   </head>
   <body>
+    <!-- navbar -->
     <div class="navbar bg-base-100 sticky shadow-lg">
       <div class="navbar-start">
         <div class="dropdown">
@@ -48,10 +49,17 @@
           </ul>
         </div>
         <a
-          class="btn btn-ghost text-primary text-3xl underline underline-offset-2"
+          class="btn btn-ghost text-primary px-5 text-3xl underline underline-offset-2"
           href="#"
           >SunSplash</a
         >
+        <div class="avatar">
+          <div class="w-14 rounded shadow-md">
+            <a href="#">
+              <img src="../icon/SunSplash - Logo.png" />
+            </a>
+          </div>
+        </div>
       </div>
       <div class="navbar-end">
         <label class="swap swap-rotate pr-3">
