--- a/src/index.html
+++ b/src/index.html
@@ -48,18 +48,18 @@
             <li class="text-secondary"><a href="./about.html">About</a></li>
           </ul>
         </div>
-        <a
-          class="btn btn-ghost text-primary px-5 text-3xl underline underline-offset-2"
-          href="#"
-          >SunSplash</a
-        >
-        <div class="avatar">
+        <div class="avatar pl-3 pr-1">
           <div class="w-14 rounded shadow-md">
             <a href="#">
               <img src="../icon/SunSplash - Logo.png" />
             </a>
           </div>
         </div>
+        <a
+          class="btn btn-ghost text-primary text-3xl underline underline-offset-2"
+          href="#"
+          >SunSplash</a
+        >
       </div>
       <div class="navbar-end">
         <label class="swap swap-rotate pr-3">
