--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
           </div>
           <ul
             tabindex="0"
-            class="menu menu-sm dropdown-content bg-base-50 rounded-box z-[1] mt-3 w-52 p-2 shadow-lg"
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow-lg"
           >
             <li class="text-primary"><a href="#">Homepage</a></li>
             <li class="text-secondary"><a href="./content.html">Content</a></li>
@@ -49,7 +49,7 @@
             <li class="text-secondary"><a href="./about.html">About</a></li>
           </ul>
         </div>
-        <div class="avatar pl-3 pr-1">
+        <div class="avatar pl-3 pr-0.5">
           <div class="w-12 rounded shadow-md">
             <a href="#">
               <img src="../icon/SunSplash - Logo.png" />
@@ -57,7 +57,7 @@
           </div>
         </div>
         <a
-          class="btn btn-ghost text-primary text-3xl underline underline-offset-2"
+          class="btn btn-ghost text-primary text-3xl underline underline-offset-2 px-2"
           href="#"
           >SunSplash</a
         >
