--- a/src/contact.html
+++ b/src/contact.html
@@ -44,9 +44,9 @@
             tabindex="0"
             class="menu dropdown-content menu-sm z-[1] mt-3 w-52 rounded-box bg-base-100 p-2 shadow-lg"
           >
-            <li class="text-primary"><a href="#">Homepage</a></li>
+            <li class="text-secondary"><a href="./index.html">Homepage</a></li>
             <li class="text-secondary"><a href="./content.html">Content</a></li>
-            <li class="text-secondary"><a href="./contact.html">Contact</a></li>
+            <li class="text-primary"><a href="#">Contact</a></li>
             <li class="text-secondary"><a href="./about.html">About</a></li>
           </ul>
         </div>
