--- a/src/contact.html
+++ b/src/contact.html
@@ -6,16 +6,8 @@
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="../dist/output.css" />
-    <link rel="icon" href="../icon/SunSplash - Logo.png">
-
-    <!-- style -->
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Prompt&display=swap");
-      * {
-        font-family: "Prompt", sans-serif;
-        scroll-behavior: smooth;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="../icon/SunSplash - Logo.png" />
 
     <title>Home</title>
   </head>
