--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,9 @@
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
                 <p class="pt-4">You are leving this page</p>
-                <p class="py-2">You are going to https://github.com/Gamemine098</p>
+                <p class="py-2">
+                  You are going to https://github.com/Gamemine098
+                </p>
                 <div class="modal-action">
                   <a href="#footer" class="btn text-error">Close</a>
                   <a
@@ -174,7 +176,10 @@
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
                 <p class="pt-4">You are leving this page</p>
-                <p class="py-2">You are going to https://www.youtube.com/channel/UCrDK56wEv68vOcMM01yV4Ew</p>
+                <p class="py-2">
+                  You are going to
+                  https://www.youtube.com/channel/UCrDK56wEv68vOcMM01yV4Ew
+                </p>
                 <div class="modal-action">
                   <a href="#footer" class="btn text-error">Close</a>
                   <a
@@ -203,7 +208,9 @@
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
                 <p class="pt-4">You are leving this page</p>
-                <p class="py-2">You are going to https://www.facebook.com/Tanakorn51213</p>
+                <p class="py-2">
+                  You are going to https://www.facebook.com/Tanakorn51213
+                </p>
                 <div class="modal-action">
                   <a href="#footer" class="btn text-error">Close</a>
                   <a
@@ -219,7 +226,7 @@
         </div>
       </nav>
       <aside>
-        <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+        <p>Copyright © 2023 - All right reserved by Me</p>
       </aside>
     </footer>
 
