--- a/src/contact.html
+++ b/src/contact.html
@@ -15,8 +15,8 @@
     <!-- navbar -->
     <div class="navbar bg-base-100 shadow-lg">
       <div class="navbar-start">
-        <div class="dropdown">
-          <div tabindex="0" role="button" class="btn shadow-lg">
+        <details class="dropdown">
+          <summary class="btn m-1">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5 text-primary"
@@ -31,17 +31,16 @@
                 d="M4 6h16M4 12h16M4 18h7"
               />
             </svg>
-          </div>
+          </summary>
           <ul
-            tabindex="0"
-            class="menu dropdown-content menu-sm z-[1] mt-3 w-52 rounded-box bg-base-100 p-2 shadow-lg"
+            class="menu dropdown-content z-[1] w-52 rounded-box bg-base-100 p-2 shadow"
           >
             <li class="text-secondary"><a href="./index.html">Homepage</a></li>
             <li class="text-secondary"><a href="./content.html">Content</a></li>
             <li class="text-primary"><a href="#">Contact</a></li>
             <li class="text-secondary"><a href="./about.html">About</a></li>
           </ul>
-        </div>
+        </details>
         <div class="avatar pl-3 pr-0.5">
           <div class="w-12 rounded shadow-md">
             <a href="./index.html">
