--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
             <div class="modal" role="dialog" id="github">
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
-                <p class="pt-4">You are leving this page</p>
+                <p class="pt-4">You are leaving this page</p>
                 <p class="py-2">
                   You are going to https://github.com/Gamemine098
                 </p>
@@ -174,15 +174,15 @@
             <div class="modal" role="dialog" id="youtube">
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
-                <p class="pt-4">You are leving this page</p>
+                <p class="pt-4">You are leaving this page</p>
                 <p class="py-2">
                   You are going to
-                  https://www.youtube.com/channel/UCrDK56wEv68vOcMM01yV4Ew
+                  https://www.youtube.com/@gamemine098
                 </p>
                 <div class="modal-action">
                   <a href="#footer" class="btn text-error">Close</a>
                   <a
-                    href="https://www.youtube.com/channel/UCrDK56wEv68vOcMM01yV4Ew"
+                    href="https://www.youtube.com/@gamemine098"
                     target="_blank"
                     class="btn text-primary"
                     >Go</a
@@ -206,7 +206,7 @@
             <div class="modal" role="dialog" id="facebook">
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
-                <p class="pt-4">You are leving this page</p>
+                <p class="pt-4">You are leaving this page</p>
                 <p class="py-2">
                   You are going to https://www.facebook.com/Tanakorn51213
                 </p>
