--- a/src/contact.html
+++ b/src/contact.html
@@ -143,7 +143,7 @@
             <div class="modal" role="dialog" id="github">
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
-                <p class="pt-4">You are leving this page</p>
+                <p class="pt-4">You are leaving this page</p>
                 <p class="py-2">
                   You are going to https://github.com/Gamemine098
                 </p>
@@ -174,7 +174,7 @@
             <div class="modal" role="dialog" id="youtube">
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
-                <p class="pt-4">You are leving this page</p>
+                <p class="pt-4">You are leaving this page</p>
                 <p class="py-2">
                   You are going to
                   https://www.youtube.com/channel/UCrDK56wEv68vOcMM01yV4Ew
@@ -206,7 +206,7 @@
             <div class="modal" role="dialog" id="facebook">
               <div class="modal-box shadow-lg">
                 <h3 class="text-lg font-bold">Hey!</h3>
-                <p class="pt-4">You are leving this page</p>
+                <p class="pt-4">You are leaving this page</p>
                 <p class="py-2">
                   You are going to https://www.facebook.com/Tanakorn51213
                 </p>
