--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
     >
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
-        <div class="max-w-md">
+        <div class="glass-blur max-w-md p-7">
           <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
           <p class="mb-5">
             Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
@@ -176,8 +176,7 @@
                 <h3 class="text-lg font-bold">Hey!</h3>
                 <p class="pt-4">You are leaving this page</p>
                 <p class="py-2">
-                  You are going to
-                  https://www.youtube.com/@gamemine098
+                  You are going to https://www.youtube.com/@gamemine098
                 </p>
                 <div class="modal-action">
                   <a href="#footer" class="btn text-error">Close</a>
