--- a/src/contact.html
+++ b/src/contact.html
@@ -100,7 +100,7 @@
     >
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
-        <div class="max-w-md">
+        <div class="glass-blur max-w-md p-7">
           <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
           <p class="mb-5">
             Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
