--- a/src/content.html
+++ b/src/content.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="../icon/SunSplash - Logo.png" />
 
-    <title>Contact</title>
+    <title>Content</title>
   </head>
   <body>
     <!-- navbar -->
@@ -36,21 +36,21 @@
             class="menu dropdown-content z-[1] w-52 rounded-box bg-base-100 p-2 shadow"
           >
             <li class="text-secondary"><a href="./index.html">Homepage</a></li>
-            <li class="text-secondary"><a href="./content.html">Content</a></li>
-            <li class="text-primary"><a href="#">Contact</a></li>
+            <li class="text-primary"><a href="#">Content</a></li>
+            <li class="text-secondary"><a href="./contact.html">Contact</a></li>
             <li class="text-secondary"><a href="./about.html">About</a></li>
           </ul>
         </details>
         <div class="avatar pl-3 pr-0.5">
           <div class="w-12 rounded shadow-md">
-            <a href="./index.html">
+            <a href="#">
               <img src="../icon/SunSplash - Logo.png" />
             </a>
           </div>
         </div>
         <a
           class="btn btn-ghost px-2 text-3xl text-primary underline underline-offset-2"
-          href="./index.html"
+          href="#"
           >SunSplash</a
         >
       </div>
@@ -176,13 +176,12 @@
                 <h3 class="text-lg font-bold">Hey!</h3>
                 <p class="pt-4">You are leaving this page</p>
                 <p class="py-2">
-                  You are going to
-                  https://www.youtube.com/channel/UCrDK56wEv68vOcMM01yV4Ew
+                  You are going to https://www.youtube.com/@gamemine098
                 </p>
                 <div class="modal-action">
                   <a href="#footer" class="btn text-error">Close</a>
                   <a
-                    href="https://www.youtube.com/channel/UCrDK56wEv68vOcMM01yV4Ew"
+                    href="https://www.youtube.com/@gamemine098"
                     target="_blank"
                     class="btn text-primary"
                     >Go</a
