--- a/src/content.html
+++ b/src/content.html
@@ -59,14 +59,14 @@
           <!-- this hidden checkbox controls the state -->
           <input
             type="checkbox"
+            data-toggle-theme="dark,light"
             class="theme-controller"
-            value="pastel"
             id="theme-controller"
           />
 
           <!-- sun icon -->
           <svg
-            class="swap-on h-7 w-7 fill-current text-primary"
+            class="swap-off h-7 w-7 fill-current text-primary"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
           >
@@ -77,7 +77,7 @@
 
           <!-- moon icon -->
           <svg
-            class="swap-off h-7 w-7 fill-current text-primary"
+            class="swap-on h-7 w-7 fill-current text-primary"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
           >
