--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           <!-- this hidden checkbox controls the state -->
           <input
             type="checkbox"
-            data-toggle-theme="dark,light"
+            data-toggle-theme="sunset,emerald"
             class="theme-controller"
             id="theme-controller"
           />
@@ -93,7 +93,7 @@
 
     <!-- header -->
     <div
-      class="hero min-h-screen"
+      class="hero min-h-screen shadow-lg"
       style="
         background-image: url(https://img.wongnai.com/p/800x0/2022/04/27/c2beafec8cf44f4097802a8697d2f51b.jpg);
       "
