--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,12 @@
             class="menu dropdown-content z-[1] w-52 rounded-box bg-base-100 p-2 shadow"
           >
             <li class="text-primary"><a href="#">Homepage</a></li>
-            <li class="text-secondary"><a href="./content.html">Content</a></li>
-            <li class="text-secondary"><a href="./contact.html">Contact</a></li>
+            <li class="text-secondary">
+              <a href="./content.html">Content</a>
+            </li>
+            <li class="text-secondary">
+              <a href="./contact.html">Contact</a>
+            </li>
             <li class="text-secondary"><a href="./about.html">About</a></li>
           </ul>
         </details>
