--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
           </div>
         </div>
         <a
-          class="btn btn-ghost px-2 text-3xl text-primary underline underline-offset-2"
+          class="btn btn-ghost px-3 text-3xl text-primary underline underline-offset-2"
           href="#"
           >SunSplash</a
         >
@@ -104,12 +104,19 @@
     >
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
-        <div class="glass-blur max-w-md p-7">
-          <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-          <p class="mb-5">
-            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-            excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
-            a id nisi.
+        <div class="glass-blur p-7">
+          <h1 class="text-shadow mb-5 text-5xl font-bold text-primary">Hey!</h1>
+          <p class="mb-5" style="font-size: 19px; line-height: 32px">
+            <span class="text-shadow font-bold text-primary">SunSplash</span> is
+            the <span class="text-shadow text-yellow-500">perfect</span> website
+            for planning your next beach vacation. Whether you're looking for a
+            relaxing beach getaway or an action-packed
+            <span class="text-shadow text-blue-300">water</span> adventure,
+            <span class="text-shadow font-bold text-primary">SunSplash</span>
+            has everything you need. This website has information about the
+            <span class="text-shadow font-bold text-secondary">best</span>
+            beach destinations in the world. Including information about
+            weather, activities and accommodations.
           </p>
           <button class="btn btn-primary">Get Started</button>
         </div>
