--- a/src/index.html
+++ b/src/index.html
@@ -105,20 +105,28 @@
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
         <div class="glass-blur p-7">
-          <h1 class="text-shadow mb-5 text-5xl font-bold text-primary">Hey!</h1>
-          <p class="mb-5" style="font-size: 19px; line-height: 32px">
-            <span class="text-shadow font-bold text-primary">SunSplash</span> is
-            the <span class="text-shadow text-yellow-500">perfect</span> website
+          <h1 class="text-shadow-4 mb-5 text-5xl font-bold text-primary">
+            Hey!
+          </h1>
+          <p
+            class="mb-5 text-neutral-200"
+            style="font-size: 19px; line-height: 32px"
+          >
+            <span class="text-shadow-3 font-bold text-primary">SunSplash</span>
+            is the
+            <span class="text-shadow-3 text-yellow-500">perfect</span> website
             for planning your next beach vacation. Whether you're looking for a
             relaxing beach getaway or an action-packed
-            <span class="text-shadow text-blue-300">water</span> adventure,
-            <span class="text-shadow font-bold text-primary">SunSplash</span>
-            has everything you need. This website has information about the
-            <span class="text-shadow font-bold text-secondary">best</span>
-            beach destinations in the world. Including information about
+            <span class="text-shadow-3 text-sky-200">water</span> adventure,
+            <span class="text-shadow-3 font-bold text-primary">SunSplash</span>
+            has everything you need. This website has
+            <span class="text-shadow-3 text-info">information</span> about the
+            <span class="text-shadow-3 font-bold text-secondary">best</span>
+            beach destinations in the world. Including
+            <span class="text-shadow-3 text-info">information</span> about
             weather, activities and accommodations.
           </p>
-          <button class="btn btn-primary">Get Started</button>
+          <button class="text-shadow-2 btn btn-primary">Get Started</button>
         </div>
       </div>
     </div>
@@ -131,10 +139,10 @@
       id="footer"
     >
       <nav class="grid grid-flow-col gap-4">
-        <a class="link-hover link">About us</a>
-        <a class="link-hover link">Contact</a>
-        <a class="link-hover link">Jobs</a>
-        <a class="link-hover link">Press kit</a>
+        <a class="link-hover link" href="#footer">Homepage</a>
+        <a class="link-hover link" href="./content.html">Content</a>
+        <a class="link-hover link" href="./contact.html">Contact</a>
+        <a class="link-hover link" href="./about.html">About</a>
       </nav>
       <nav>
         <div class="grid grid-flow-col gap-4">
@@ -235,7 +243,7 @@
         </div>
       </nav>
       <aside>
-        <p>Copyright © 2023 - All right reserved by Me</p>
+        <p>Copyright © 2024 - All right reserved by Me</p>
       </aside>
     </footer>
 
