--- a/src/content.html
+++ b/src/content.html
@@ -120,10 +120,10 @@
       id="footer"
     >
       <nav class="grid grid-flow-col gap-4">
-        <a class="link-hover link">About us</a>
-        <a class="link-hover link">Contact</a>
-        <a class="link-hover link">Jobs</a>
-        <a class="link-hover link">Press kit</a>
+        <a class="link-hover link" href="./index.html">Homepage</a>
+        <a class="link-hover link" href="#footer">Content</a>
+        <a class="link-hover link" href="./contact.html">Contact</a>
+        <a class="link-hover link" href="./about.html">About</a>
       </nav>
       <nav>
         <div class="grid grid-flow-col gap-4">
@@ -224,7 +224,7 @@
         </div>
       </nav>
       <aside>
-        <p>Copyright © 2023 - All right reserved by Me</p>
+        <p>Copyright © 2024 - All right reserved by Me</p>
       </aside>
     </footer>
 
