--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <div class="navbar bg-base-100 shadow-lg">
+    <div class="navbar bg-base-100 shadow--300
       <div class="navbar-start">
         <details class="dropdown">
           <summary class="btn m-1">
@@ -126,7 +126,57 @@
             <span class="text-shadow-3 text-info">information</span> about
             weather, activities and accommodations.
           </p>
-          <button class="text-shadow-2 btn btn-primary">Get Started</button>
+          <button class="text-shadow-2 btn btn-primary">
+            <a href="./content.html">Get Started</a>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <br />
+
+    <!-- Gallery -->
+    <div class="grid grid-cols-3 justify-items-center">
+      <div class="card image-full w-100 shadow-xl mx-10">
+        <figure>
+          <img
+            src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+            alt="Shoes"
+          />
+        </figure>
+        <div class="card-body">
+          <br><br><br><br><br>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">Visit</button>
+          </div>
+        </div>
+      </div>
+      <div class="card image-full w-100 bg-base-300 shadow-xl mx-10">
+        <figure>
+          <img
+            src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+            alt="Shoes"
+          />
+        </figure>
+        <div class="card-body">
+          <br><br><br><br><br>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">Visit</button>
+          </div>
+        </div>
+      </div>
+      <div class="card image-full w-100 bg-base-300 shadow-xl mx-10">
+        <figure>
+          <img
+            src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+            alt="Shoes"
+          />
+        </figure>
+        <div class="card-body">
+          <br><br><br><br><br>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">Visit</button>
+          </div>
         </div>
       </div>
     </div>
