--- a/src/content.html
+++ b/src/content.html
@@ -43,14 +43,14 @@
         </details>
         <div class="avatar pl-3 pr-0.5">
           <div class="w-12 rounded shadow-md">
-            <a href="#">
+            <a href="./index.html">
               <img src="../icon/SunSplash - Logo.png" />
             </a>
           </div>
         </div>
         <a
           class="btn btn-ghost px-2 text-3xl text-primary underline underline-offset-2"
-          href="#"
+          href="./index.html"
           >SunSplash</a
         >
       </div>
