--- a/src/index.html
+++ b/src/index.html
@@ -140,12 +140,11 @@
       <div class="card image-full w-100 shadow-xl mx-10">
         <figure>
           <img
-            src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-            alt="Shoes"
+            src="https://img.wongnai.com/p/800x0/2022/04/27/45f94cc8cd15405f9b58087bb059d28d.jpg"
           />
         </figure>
         <div class="card-body">
-          <br><br><br><br><br>
+          <br><br><br><br><br><br><br><br>
           <div class="card-actions justify-end">
             <button class="btn btn-primary">Visit</button>
           </div>
@@ -154,12 +153,11 @@
       <div class="card image-full w-100 bg-base-300 shadow-xl mx-10">
         <figure>
           <img
-            src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-            alt="Shoes"
+            src="https://img.wongnai.com/p/800x0/2022/04/27/cde6f0d7467c426ea0ef57e15a1bf49c.jpg"
           />
         </figure>
         <div class="card-body">
-          <br><br><br><br><br>
+          <br><br><br><br><br><br><br><br>
           <div class="card-actions justify-end">
             <button class="btn btn-primary">Visit</button>
           </div>
@@ -168,12 +166,11 @@
       <div class="card image-full w-100 bg-base-300 shadow-xl mx-10">
         <figure>
           <img
-            src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-            alt="Shoes"
+            src="https://img.wongnai.com/p/800x0/2022/04/27/e5aefd798176439d8c63113398b4abe1.jpg"
           />
         </figure>
         <div class="card-body">
-          <br><br><br><br><br>
+          <br><br><br><br><br><br><br><br>
           <div class="card-actions justify-end">
             <button class="btn btn-primary">Visit</button>
           </div>
