--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <div class="navbar bg-base-100 shadow--300
+    <div class="navbar bg-base-100 shadow-lg">
       <div class="navbar-start">
         <details class="dropdown">
           <summary class="btn m-1">
@@ -36,12 +36,8 @@
             class="menu dropdown-content z-[1] w-52 rounded-box bg-base-100 p-2 shadow"
           >
             <li class="text-primary"><a href="#">Homepage</a></li>
-            <li class="text-secondary">
-              <a href="./content.html">Content</a>
-            </li>
-            <li class="text-secondary">
-              <a href="./contact.html">Contact</a>
-            </li>
+            <li class="text-secondary"><a href="./content.html">Content</a></li>
+            <li class="text-secondary"><a href="./contact.html">Contact</a></li>
             <li class="text-secondary"><a href="./about.html">About</a></li>
           </ul>
         </details>
@@ -53,7 +49,7 @@
           </div>
         </div>
         <a
-          class="btn btn-ghost px-3 text-3xl text-primary underline underline-offset-2"
+          class="btn btn-ghost px-2 text-3xl text-primary underline underline-offset-2"
           href="#"
           >SunSplash</a
         >
@@ -136,43 +132,48 @@
     <br />
 
     <!-- Gallery -->
-    <div class="grid grid-cols-3 justify-items-center">
-      <div class="card image-full w-100 shadow-xl mx-10">
+    <div
+      class="grid grid-cols-3 justify-items-center bg-base-200 py-10 shadow-xl"
+    >
+      <div class="card card-compact w-96 bg-base-100 shadow-xl">
         <figure>
           <img
-            src="https://img.wongnai.com/p/800x0/2022/04/27/45f94cc8cd15405f9b58087bb059d28d.jpg"
+            src="https://img.wongnai.com/p/800x0/2022/04/28/3bc05ca8be894484a693fbdb8e4dd82d.jpg"
+            class="h-72"
           />
         </figure>
         <div class="card-body">
-          <br><br><br><br><br><br><br><br>
+          <h2 class="card-title">ทะเลเกาะทะลุ จ.ประจวบคีรีขันธ์</h2>
           <div class="card-actions justify-end">
-            <button class="btn btn-primary">Visit</button>
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
           </div>
         </div>
       </div>
-      <div class="card image-full w-100 bg-base-300 shadow-xl mx-10">
+      <div class="card card-compact w-96 bg-base-100 shadow-xl">
         <figure>
           <img
-            src="https://img.wongnai.com/p/800x0/2022/04/27/cde6f0d7467c426ea0ef57e15a1bf49c.jpg"
+            src="https://img.wongnai.com/p/800x0/2022/04/27/45bf151298654572bb17eb14441571eb.jpg"
+            class="h-72"
           />
         </figure>
         <div class="card-body">
-          <br><br><br><br><br><br><br><br>
+          <h2 class="card-title">ทะเลเกาะราชาใหญ่ จ.ภูเก็ต</h2>
           <div class="card-actions justify-end">
-            <button class="btn btn-primary">Visit</button>
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
           </div>
         </div>
       </div>
-      <div class="card image-full w-100 bg-base-300 shadow-xl mx-10">
+      <div class="card card-compact w-96 bg-base-100 shadow-xl">
         <figure>
           <img
             src="https://img.wongnai.com/p/800x0/2022/04/27/e5aefd798176439d8c63113398b4abe1.jpg"
+            class="h-72"
           />
         </figure>
         <div class="card-body">
-          <br><br><br><br><br><br><br><br>
+          <h2 class="card-title">ทะเลเกาะมุก จ.ตรัง</h2>
           <div class="card-actions justify-end">
-            <button class="btn btn-primary">Visit</button>
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
           </div>
         </div>
       </div>
