--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <div class="navbar bg-base-100 shadow-lg fixed-important z-50">
+    <div class="fixed-important navbar z-50 bg-base-100 shadow-lg">
       <div class="navbar-start">
         <details class="dropdown">
           <summary class="btn m-1">
@@ -54,7 +54,27 @@
           >SunSplash</a
         >
       </div>
-      <div class="navbar-end"></div>
+      <div class="navbar-end">
+        <a
+          class="tooltip tooltip-left tooltip-primary mr-5 text-primary"
+          data-tip="By Tanakorn Meesarp"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-5 w-5"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+            />
+          </svg>
+        </a>
+      </div>
     </div>
 
     <!-- ez dark mode toggle -->
