--- a/src/index.html
+++ b/src/index.html
@@ -158,14 +158,15 @@
 
     <!-- Gallery -->
     <div
+      id="#Card_First"
       class="grid grid-cols-3 justify-items-center bg-base-200 py-10 shadow-xl"
     >
-      <div class="card card-compact w-96 bg-base-100 shadow-xl">
+      <div class="card card-compact bg-base-100 shadow-xl" style="width: 400px">
         <figure>
           <img
             src="https://img.wongnai.com/p/800x0/2022/04/28/3bc05ca8be894484a693fbdb8e4dd82d.jpg"
             loading="lazy"
-            class="h-72"
+            style="height: 300px"
           />
         </figure>
         <div class="card-body">
@@ -175,12 +176,12 @@
           </div>
         </div>
       </div>
-      <div class="card card-compact w-96 bg-base-100 shadow-xl">
+      <div class="card card-compact bg-base-100 shadow-xl" style="width: 400px">
         <figure>
           <img
-            src="https://img.wongnai.com/p/800x0/2022/04/27/45bf151298654572bb17eb14441571eb.jpg"
+            src="https://ak-d.tripcdn.com/images/0104e120008fzat1k7EB0.jpg?proc=source%2Ftrip"
             loading="lazy"
-            class="h-72"
+            style="height: 300px"
           />
         </figure>
         <div class="card-body">
@@ -190,12 +191,12 @@
           </div>
         </div>
       </div>
-      <div class="card card-compact w-96 bg-base-100 shadow-xl">
+      <div class="card card-compact bg-base-100 shadow-xl" style="width: 400px">
         <figure>
           <img
             src="https://img.wongnai.com/p/800x0/2022/04/27/e5aefd798176439d8c63113398b4abe1.jpg"
             loading="lazy"
-            class="h-72"
+            style="height: 300px"
           />
         </figure>
         <div class="card-body">
