--- a/src/content.html
+++ b/src/content.html
@@ -78,7 +78,10 @@
     </div>
 
     <!-- ez dark mode toggle -->
-    <div class="fixed-important bottom-0-important right-0-important">
+    <div
+      id="Theme"
+      class="fixed-important bottom-0-important right-0-important"
+    >
       <div class="btn btn-sm my-5 mb-3 mr-3 h-12 shadow-lg">
         <label class="swap swap-rotate">
           <!-- this hidden checkbox controls the state -->
@@ -120,21 +123,11 @@
     <div
       class="hero min-h-screen shadow-lg"
       style="
-        background-image: url(https://img.wongnai.com/p/800x0/2022/04/27/c2beafec8cf44f4097802a8697d2f51b.jpg);
+        background-image: url(https://img.wongnai.com/p/800x0/2022/04/27/c4281dd4ae5948c683acccf08a6eedd5.jpg);
       "
     >
       <div class="hero-overlay bg-opacity-60"></div>
-      <div class="hero-content text-center text-neutral-content">
-        <div class="glass-blur max-w-md p-7">
-          <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-          <p class="mb-5">
-            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-            excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
-            a id nisi.
-          </p>
-          <button class="btn btn-primary">Get Started</button>
-        </div>
-      </div>
+      <div class="hero-content text-center text-neutral-content"></div>
     </div>
 
     <br />
