--- a/src/about.html
+++ b/src/about.html
@@ -78,7 +78,10 @@
     </div>
 
     <!-- ez dark mode toggle -->
-    <div class="fixed-important bottom-0-important right-0-important">
+    <div
+      id="Theme"
+      class="fixed-important bottom-0-important right-0-important"
+    >
       <div class="btn btn-sm my-5 mb-3 mr-3 h-12 shadow-lg">
         <label class="swap swap-rotate">
           <!-- this hidden checkbox controls the state -->
@@ -148,7 +151,7 @@
         <a class="link-hover link" href="./index.html">Homepage</a>
         <a class="link-hover link" href="./content.html">Content</a>
         <a class="link-hover link" href="./contact.html">Contact</a>
-        <a class="link-hover link" href="#footer">About</a> 
+        <a class="link-hover link" href="#footer">About</a>
       </nav>
       <nav>
         <div class="grid grid-flow-col gap-4">
