--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,10 @@
     </div>
 
     <!-- ez dark mode toggle -->
-    <div class="fixed-important bottom-0-important right-0-important">
+    <div
+      id="Theme"
+      class="fixed-important bottom-0-important right-0-important"
+    >
       <div class="btn btn-sm my-5 mb-3 mr-3 h-12 shadow-lg">
         <label class="swap swap-rotate">
           <!-- this hidden checkbox controls the state -->
