--- a/src/content.html
+++ b/src/content.html
@@ -119,15 +119,155 @@
 
     <br />
 
-    <!-- header -->
+    <!-- content -->
     <div
-      class="hero min-h-screen shadow-lg"
-      style="
-        background-image: url(https://img.wongnai.com/p/800x0/2022/04/27/c4281dd4ae5948c683acccf08a6eedd5.jpg);
-      "
+      class="grid grid-cols-3 justify-items-center bg-base-200 py-10 pt-20 shadow-xl"
     >
-      <div class="hero-overlay bg-opacity-60"></div>
-      <div class="hero-content text-center text-neutral-content"></div>
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://img.wongnai.com/p/800x0/2022/04/28/3bc05ca8be894484a693fbdb8e4dd82d.jpg"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะทะลุ จ.ประจวบคีรีขันธ์</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://ak-d.tripcdn.com/images/0104e120008fzat1k7EB0.jpg?proc=source%2Ftrip"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะราชาใหญ่ จ.ภูเก็ต</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://img.wongnai.com/p/800x0/2022/04/27/e5aefd798176439d8c63113398b4abe1.jpg"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะมุก จ.ตรัง</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="grid grid-cols-3 justify-items-center bg-base-200 py-10 shadow-xl"
+    >
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://img.wongnai.com/p/800x0/2022/04/28/3bc05ca8be894484a693fbdb8e4dd82d.jpg"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะทะลุ จ.ประจวบคีรีขันธ์</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://ak-d.tripcdn.com/images/0104e120008fzat1k7EB0.jpg?proc=source%2Ftrip"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะราชาใหญ่ จ.ภูเก็ต</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://img.wongnai.com/p/800x0/2022/04/27/e5aefd798176439d8c63113398b4abe1.jpg"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะมุก จ.ตรัง</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="grid grid-cols-3 justify-items-center bg-base-200 py-10 shadow-xl"
+    >
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://img.wongnai.com/p/800x0/2022/04/28/3bc05ca8be894484a693fbdb8e4dd82d.jpg"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะทะลุ จ.ประจวบคีรีขันธ์</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://ak-d.tripcdn.com/images/0104e120008fzat1k7EB0.jpg?proc=source%2Ftrip"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะราชาใหญ่ จ.ภูเก็ต</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-xl" style="width: 400px">
+        <figure>
+          <img
+            src="https://img.wongnai.com/p/800x0/2022/04/27/e5aefd798176439d8c63113398b4abe1.jpg"
+            loading="lazy"
+            style="height: 300px"
+          />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">ทะเลเกาะมุก จ.ตรัง</h2>
+          <div class="card-actions justify-end">
+            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <br />
