--- a/src/about.html
+++ b/src/about.html
@@ -122,7 +122,7 @@
     <br />
 
     <!-- idk -->
-    <div role="alert" class="fixed-important alert alert-warning z-10">
+    <div role="alert" class="fixed-important alert alert-warning z-10 mt-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="h-6 w-6 shrink-0 stroke-current"
@@ -136,7 +136,10 @@
           d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
         />
       </svg>
-      <span>Warning: This website didn't compatible with mobile or tablet, Because I lazy.</span>
+      <span
+        >Warning: This website didn't compatible with mobile or tablet, Because
+        I lazy.</span
+      >
     </div>
 
     <!-- header -->
@@ -148,13 +151,9 @@
     >
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
-        <div class="glass-blur max-w-md p-7">
-          <h1 class="mb-5 text-5xl font-bold">About</h1>
-          <p class="mb-5">
-            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-            excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
-            a id nisi.
-          </p>
+        <div class="glass-blur max-w-md p-7 px-20">
+          <h1 class="mb-5 text-5xl font-bold text-primary">About</h1>
+          <p class="mb-5 text-white">Website นี้สร้างขึ้นมาเพื่อส่งงานของชมรมเขียนโค้ด</p>
         </div>
       </div>
     </div>
